@@ -1,5 +1,6 @@
 2.4 (in development)
 
+o Bad interaction between deferred decryption and object streams fixed
 o Optional content groups merged when merging
 o Preserves zero bytes in malformed names
 o Merged files get fresh /ID
